--- a/.devcontainer/requirements.txt
+++ b/.devcontainer/requirements.txt
@@ -1,50 +1,59 @@
-aiohttp==3.9.1 ; python_version >= "3.10" and python_version < "3.11"
+--extra-index-url https://download.pytorch.org/whl/cpu
+
+aiohttp==3.9.3 ; python_version >= "3.10" and python_version < "3.11"
 aiosignal==1.3.1 ; python_version >= "3.10" and python_version < "3.11"
 annotated-types==0.6.0 ; python_version >= "3.10" and python_version < "3.11"
 anyio==4.2.0 ; python_version >= "3.10" and python_version < "3.11"
 async-timeout==4.0.3 ; python_version >= "3.10" and python_version < "3.11"
 attrs==23.2.0 ; python_version >= "3.10" and python_version < "3.11"
 boltons==23.1.1 ; python_version >= "3.10" and python_version < "3.11"
-certifi==2023.11.17 ; python_version >= "3.10" and python_version < "3.11"
+certifi==2024.2.2 ; python_version >= "3.10" and python_version < "3.11"
 charset-normalizer==3.3.2 ; python_version >= "3.10" and python_version < "3.11"
 click==8.1.7 ; python_version >= "3.10" and python_version < "3.11"
 colorama==0.4.6 ; python_version >= "3.10" and python_version < "3.11"
 colored==2.2.4 ; python_version >= "3.10" and python_version < "3.11"
-dataclasses-json==0.6.3 ; python_version >= "3.10" and python_version < "3.11"
+dataclasses-json==0.6.4 ; python_version >= "3.10" and python_version < "3.11"
 distro==1.9.0 ; python_version >= "3.10" and python_version < "3.11"
 eliot-tree==21.0.0 ; python_version >= "3.10" and python_version < "3.11"
 eliot==1.15.0 ; python_version >= "3.10" and python_version < "3.11"
 exceptiongroup==1.2.0 ; python_version >= "3.10" and python_version < "3.11"
 faiss-cpu==1.7.4 ; python_version >= "3.10" and python_version < "3.11"
+filelock==3.13.1 ; python_version >= "3.10" and python_version < "3.11"
 frozenlist==1.4.1 ; python_version >= "3.10" and python_version < "3.11"
+fsspec==2024.2.0 ; python_version >= "3.10" and python_version < "3.11"
 greenlet==3.0.3 ; python_version >= "3.10" and python_version < "3.11" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
 griffe==0.36.9 ; python_version >= "3.10" and python_version < "3.11"
 guardrails-ai==0.3.2 ; python_version >= "3.10" and python_version < "3.11"
 h11==0.14.0 ; python_version >= "3.10" and python_version < "3.11"
 httpcore==1.0.2 ; python_version >= "3.10" and python_version < "3.11"
 httpx==0.26.0 ; python_version >= "3.10" and python_version < "3.11"
+huggingface-hub==0.20.3 ; python_version >= "3.10" and python_version < "3.11"
 idna==3.6 ; python_version >= "3.10" and python_version < "3.11"
 iso8601==2.1.0 ; python_version >= "3.10" and python_version < "3.11"
+jinja2==3.1.3 ; python_version >= "3.10" and python_version < "3.11"
 jmespath==1.0.1 ; python_version >= "3.10" and python_version < "3.11"
 jsonpatch==1.33 ; python_version >= "3.10" and python_version < "3.11"
 jsonpointer==2.4 ; python_version >= "3.10" and python_version < "3.11"
 langchain-community==0.0.15 ; python_version >= "3.10" and python_version < "3.11"
-langchain-core==0.1.15 ; python_version >= "3.10" and python_version < "3.11"
-langsmith==0.0.83 ; python_version >= "3.10" and python_version < "3.11"
+langchain-core==0.1.22 ; python_version >= "3.10" and python_version < "3.11"
+langsmith==0.0.87 ; python_version >= "3.10" and python_version < "3.11"
 lxml==4.9.4 ; python_version >= "3.10" and python_version < "3.11"
 markdown-it-py==3.0.0 ; python_version >= "3.10" and python_version < "3.11"
+markupsafe==2.1.5 ; python_version >= "3.10" and python_version < "3.11"
 marshmallow==3.20.2 ; python_version >= "3.10" and python_version < "3.11"
 mdurl==0.1.2 ; python_version >= "3.10" and python_version < "3.11"
-multidict==6.0.4 ; python_version >= "3.10" and python_version < "3.11"
+mpmath==1.3.0 ; python_version >= "3.10" and python_version < "3.11"
+multidict==6.0.5 ; python_version >= "3.10" and python_version < "3.11"
 mypy-extensions==1.0.0 ; python_version >= "3.10" and python_version < "3.11"
-numpy==1.26.3 ; python_version >= "3.10" and python_version < "3.11"
-openai==1.10.0 ; python_version >= "3.10" and python_version < "3.11"
-orjson==3.9.12 ; python_version >= "3.10" and python_version < "3.11" and implementation_name == "cpython"
+networkx==3.2.1 ; python_version >= "3.10" and python_version < "3.11"
+numpy==1.26.4 ; python_version >= "3.10" and python_version < "3.11"
+openai==1.12.0 ; python_version >= "3.10" and python_version < "3.11"
+orjson==3.9.13 ; python_version >= "3.10" and python_version < "3.11" and implementation_name == "cpython"
 packaging==23.2 ; python_version >= "3.10" and python_version < "3.11"
-polars==0.20.5 ; python_version >= "3.10" and python_version < "3.11"
+polars==0.20.7 ; python_version >= "3.10" and python_version < "3.11"
 pydantic-core==2.10.1 ; python_version >= "3.10" and python_version < "3.11"
 pydantic==2.4.2 ; python_version >= "3.10" and python_version < "3.11"
-pydash==7.0.6 ; python_version >= "3.10" and python_version < "3.11"
+pydash==7.0.7 ; python_version >= "3.10" and python_version < "3.11"
 pygments==2.17.2 ; python_version >= "3.10" and python_version < "3.11"
 pyrsistent==0.20.0 ; python_version >= "3.10" and python_version < "3.11"
 python-dateutil==2.8.2 ; python_version >= "3.10" and python_version < "3.11"
@@ -54,20 +63,25 @@ regex==2023.12.25 ; python_version >= "3.10" and python_version < "3.11"
 requests==2.31.0 ; python_version >= "3.10" and python_version < "3.11"
 rich==13.7.0 ; python_version >= "3.10" and python_version < "3.11"
 rstr==3.2.2 ; python_version >= "3.10" and python_version < "3.11"
-setuptools==69.0.3 ; python_version >= "3.10" and python_version < "3.11"
+safetensors==0.4.2 ; python_version >= "3.10" and python_version < "3.11"
+setuptools==69.1.0 ; python_version >= "3.10" and python_version < "3.11"
 six==1.16.0 ; python_version >= "3.10" and python_version < "3.11"
 sniffio==1.3.0 ; python_version >= "3.10" and python_version < "3.11"
 sortedcontainers==2.4.0 ; python_version >= "3.10" and python_version < "3.11"
-sqlalchemy==2.0.25 ; python_version >= "3.10" and python_version < "3.11"
+sqlalchemy==2.0.26 ; python_version >= "3.10" and python_version < "3.11"
+sympy==1.12 ; python_version >= "3.10" and python_version < "3.11"
 tenacity==8.2.3 ; python_version >= "3.10" and python_version < "3.11"
 tiktoken==0.5.2 ; python_version >= "3.10" and python_version < "3.11"
+tokenizers==0.15.2 ; python_version >= "3.10" and python_version < "3.11"
 toml==0.10.2 ; python_version >= "3.10" and python_version < "3.11"
 toolz==0.12.1 ; python_version >= "3.10" and python_version < "3.11"
-tqdm==4.66.1 ; python_version >= "3.10" and python_version < "3.11"
+torch==2.2.0+cpu ; python_version >= "3.10" and python_version < "3.11"
+tqdm==4.66.2 ; python_version >= "3.10" and python_version < "3.11"
+transformers==4.37.2 ; python_version >= "3.10" and python_version < "3.11"
 typer==0.9.0 ; python_version >= "3.10" and python_version < "3.11"
 typing-extensions==4.9.0 ; python_version >= "3.10" and python_version < "3.11"
 typing-inspect==0.9.0 ; python_version >= "3.10" and python_version < "3.11"
-urllib3==2.1.0 ; python_version >= "3.10" and python_version < "3.11"
+urllib3==2.2.0 ; python_version >= "3.10" and python_version < "3.11"
 win-unicode-console==0.5 ; python_version >= "3.10" and python_version < "3.11" and platform_system == "Windows"
 yarl==1.9.4 ; python_version >= "3.10" and python_version < "3.11"
 zope-interface==6.1 ; python_version >= "3.10" and python_version < "3.11"
