--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,13 +19,18 @@ typer = "^0.9.0"
 httpx = "^0.26.0"
 sortedcontainers = "^2.4.0"
 faiss-cpu = "^1.7.4"
-guardrails-ai = "^0.3.2"
+# guardrails-ai = "^0.3.2"
 numpy = "^1.26.3"
 annotated-types = "^0.6.0"
 polars = "^0.20.5"
 langchain-community = "^0.0.15"
 torch = {version = "^2.2.0+cpu", source = "torch-cpu"}
 transformers = "^4.37.2"
+sentence-transformers = "^5.0.0"
+guardrails-ai = "0.1.8"
+openai = "0.28.1"
+pydantic = "1.10.13"
+ipykernel = "^6.30.0"
 
 [tool.poetry.dev-dependencies]
 
